--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@angular/common": "~16.0.0",
     "@angular/compiler": "~16.0.0",
     "@angular/core": "~16.0.0",
+    "@angular/cdk": "~16.0.0",
     "@angular/forms": "~16.0.0",
     "@angular/platform-browser": "~16.0.0",
     "@angular/platform-browser-dynamic": "~16.0.0",
