--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "prepare": "husky install"
   },
   "private": true,
+  "packageManager": "pnpm@8.4.0",
+  "engines": {
+    "pnpm": "^8.0.0"
+  },
   "dependencies": {
     "@angular/animations": "~16.0.0",
     "@angular/common": "~16.0.0",
